using UnityEngine;
using System.Collections;

public class Caterpillar : EnemyController_2D
{
    [Header("Caterpillar Settings")]
    [Tooltip("ê¸°ë³¸ ê±·ê¸° ì†ë„")]
    public float walkSpeed = 2.0f;
    [Tooltip("ëŒì§„(ê³µê²©) ì‹œ ì†ë„")]
    public float dashSpeed = 6.0f;
    [Tooltip("ëŒì§„ì„ ì‹œì‘í•˜ëŠ” ê±°ë¦¬")]
    public float dashRange = 5.0f;
    [Tooltip("ëŒì§„ ì§€ì† ì‹œê°„")]
    public float attackDuration = 1.0f;

    [Header("Animation Speed")]
    public float walkAnimSpeed = 1.0f;
    public float dashAnimSpeed = 2.0f;

    // ë‚´ë¶€ ë³€ìˆ˜
    private Vector3 targetPos;
    private bool isDashing = false;
    private Vector3 lockedDashDirection;

    // ì• ë‹ˆë©”ì´í„° íŒŒë¼ë¯¸í„° í•´ì‹œ
    private readonly int hashTR = Animator.StringToHash("isTR"); // Top-Right (ìš°ìƒ)
    private readonly int hashTL = Animator.StringToHash("isTL"); // Top-Left (ì¢Œìƒ)
    private readonly int hashBR = Animator.StringToHash("isBR"); // Bottom-Right (ìš°í•˜)
    private readonly int hashBL = Animator.StringToHash("isBL"); // Bottom-Left (ì¢Œí•˜)

    protected override void Start()
    {
        // ë¶€ëª¨ì˜ Startì—ì„œ ìµœìƒìœ„ì˜ SpriteRenderer(sr)ë¥¼ ì°¾ìŠµë‹ˆë‹¤.
        base.Start();
    }

    protected override void Update()
    {
        if (isDead || player == null) return;

        if (isDashing) return;

        targetPos = player.position;
        float distance = Vector3.Distance(transform.position, targetPos);

        if (distance <= dashRange)
        {
            StartCoroutine(AttackRoutine());
        }
        else
        {
            HandleMovementAndRotation();
        }

        // í…ŒìŠ¤íŠ¸ìš©
        if (Input.GetKeyDown(KeyCode.K)) TakeDamage(10);
    }

    void HandleMovementAndRotation()
    {
        animator.speed = walkAnimSpeed;

        Vector3 direction = (targetPos - transform.position).normalized;
        if (direction == Vector3.zero) return;

        // ì´ë™
        transform.position += direction * walkSpeed * Time.deltaTime;

        // ì• ë‹ˆë©”ì´ì…˜ & íšŒì „
        UpdateAnimationAndRotation(direction);
    }

    IEnumerator AttackRoutine()
    {
        isDashing = true;
        animator.speed = dashAnimSpeed;

        lockedDashDirection = (player.position - transform.position).normalized;
        UpdateAnimationAndRotation(lockedDashDirection);

        float timer = 0f;
        while (timer < attackDuration)
        {
            if (isDead) yield break;

            transform.position += lockedDashDirection * dashSpeed * Time.deltaTime;

            timer += Time.deltaTime;
            yield return null;
        }

        animator.speed = walkAnimSpeed;
        yield return new WaitForSeconds(0.5f);

        isDashing = false;
    }

    void UpdateAnimationAndRotation(Vector3 dir)
    {
        if (dir == Vector3.zero) return;

        float angle = Mathf.Atan2(dir.y, dir.x) * Mathf.Rad2Deg;
        float baseAngle = 0f;

        // 4ë°©í–¥ íŒì •
        if (angle >= 0 && angle < 90)
        {
            SetDirectionAnim(hashTR);
            baseAngle = 45f;
        }
        else if (angle >= 90 && angle <= 180)
        {
            SetDirectionAnim(hashTL);
            baseAngle = 135f;
        }
        else if (angle >= -180 && angle < -90)
        {
            SetDirectionAnim(hashBL);
            baseAngle = -135f;
        }
        else
        {
            SetDirectionAnim(hashBR);
            baseAngle = -45f;
        }

        // ê°ë„ ë³´ì •
        float rotationOffset = angle - baseAngle;
        transform.rotation = Quaternion.Euler(0, 0, rotationOffset);
    }

    void SetDirectionAnim(int activeHash)
    {
        animator.SetBool(hashTR, activeHash == hashTR);
        animator.SetBool(hashTL, activeHash == hashTL);
        animator.SetBool(hashBR, activeHash == hashBR);
        animator.SetBool(hashBL, activeHash == hashBL);
    }

    protected override void OnTriggerEnter2D(Collider2D other)
    {
        base.OnTriggerEnter2D(other);

        if (other.CompareTag("Player"))
        {
            Debug.Log($"ğŸ› ì• ë²Œë ˆ ëª¸í†µ ë°•ì¹˜ê¸°! ë°ë¯¸ì§€: {damage}");
        }
    }

    // â˜… [ìˆ˜ì •ë¨] protected -> publicìœ¼ë¡œ ë³€ê²½
    public override void Die()
    {
        if (isDead) return;
        isDead = true;

        // ì• ë‹ˆë©”ì´ì…˜ ì†ë„ ì›ë³µ ë° ì½”ë£¨í‹´ ì •ì§€
        animator.speed = 1f;
        StopAllCoroutines();

        // ë¬¼ë¦¬ ë¹„í™œì„±í™”
        if (rb != null) rb.velocity = Vector2.zero;
        if (myCollider != null) myCollider.enabled = false;

        // ì•„ì´í…œ ë“œë
        DropItem();

        // ì„œì„œíˆ ì‚¬ë¼ì§€ëŠ” ì—°ì¶œ ì‹œì‘
        StartCoroutine(FadeOutAndDestroy());
    }

    IEnumerator FadeOutAndDestroy()
    {
        float fadeTime = 1.0f;
        float t = 0;
        Color startColor = sr != null ? sr.color : Color.white;

        while (t < fadeTime)
        {
            t += Time.deltaTime;
            if (sr != null)
            {
                float newAlpha = Mathf.Lerp(startColor.a, 0f, t / fadeTime);
                Color c = sr.color;
                c.a = newAlpha;
                sr.color = c;
            }
            yield return null;
        }

        Destroy(gameObject);
    }

    // [í”¼ê²© ì—°ì¶œ ì˜¤ë²„ë¼ì´ë“œ] ë¶€ëª¨ì˜ TakeDamageì— ì˜í•´ í˜¸ì¶œë¨
    protected override IEnumerator HitFlashRoutine()
    {
        if (sr != null)
        {
            sr.color = hitColor;
            yield return new WaitForSeconds(flashDuration);
            sr.color = Color.white;
        }
    }
}